[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Fonts/Righteous20.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/Righteous50.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Themes/CuteButtonTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Themes/Roboto12Clean.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Themes/LineEditCool.tres" type="Theme" id=5]
[ext_resource path="res://addons/calendar_button/scripts/calendar_script.gd" type="Script" id=6]
[ext_resource path="res://Assets/Buttons/cancelBtn.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Views/Reminders.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Views/Reminder/NewReminderContainer.gd" type="Script" id=9]
[ext_resource path="res://Assets/Themes/Dark/PanelDarkGreen.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/Buttons/cancelBtn_hover.png" type="Texture" id=11]
[ext_resource path="res://Assets/Buttons/link_hover.png" type="Texture" id=12]
[ext_resource path="res://Assets/Buttons/link_idle.png" type="Texture" id=13]
[ext_resource path="res://Assets/Buttons/CalendarHover.png" type="Texture" id=14]
[ext_resource path="res://Assets/Buttons/Calendar.png" type="Texture" id=15]
[ext_resource path="res://Assets/Views/Reminders/ReminderItem.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Themes/Dark/PanelGreenNoBorder.tres" type="StyleBox" id=17]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=13]
content_margin_left = 10.0

[sub_resource type="StyleBoxFlat" id=14]
content_margin_left = 10.0
bg_color = Color( 0.0588235, 0.105882, 0.109804, 1 )

[sub_resource type="Theme" id=15]
default_font = ExtResource( 1 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 13 )
LineEdit/styles/normal = ExtResource( 17 )
LineEdit/styles/read_only = SubResource( 14 )

[sub_resource type="StyleBoxEmpty" id=18]

[node name="Reminders" type="Control"]
margin_right = 990.0
margin_bottom = 571.0
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ -192.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 690.327 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 28.0
margin_right = -30.0
margin_bottom = -29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 990.0
margin_bottom = 63.0
custom_colors/font_color = Color( 0.854902, 0.423529, 0.384314, 1 )
custom_fonts/font = ExtResource( 2 )
text = "REMINDERS"

[node name="Panel" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 945.0
margin_bottom = 514.0
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_constants/separation = 20

[node name="Active" type="Panel" parent="VBoxContainer/Panel"]
margin_right = 277.0
margin_bottom = 514.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 17 )

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer/Panel/Active"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/Active/Scroll"]
margin_right = 267.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReminderItem" parent="VBoxContainer/Panel/Active/Scroll/VBoxContainer" instance=ExtResource( 16 )]
visible = false

[node name="NewReminderContainer" type="Control" parent="VBoxContainer/Panel"]
margin_left = 297.0
margin_right = 647.0
margin_bottom = 514.0
rect_min_size = Vector2( 350, 0 )
size_flags_horizontal = 3
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="VBoxContainer/Panel/NewReminderContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_right = -9.0
custom_styles/panel = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="VBoxContainer/Panel/NewReminderContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = 43.0
margin_right = -13.0
margin_bottom = -42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB1" type="VBoxContainer" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB"]
margin_right = 306.0
margin_bottom = 322.0
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CalendarButton" type="TextureButton" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1"]
margin_top = 36.0
margin_right = 306.0
margin_bottom = 66.0
rect_min_size = Vector2( 40, 30 )
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLabel" type="Label" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1"]
margin_top = 70.0
margin_right = 306.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = ExtResource( 2 )
text = "00/00/0000"
align = 1

[node name="Control" type="Control" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1"]
margin_top = 137.0
margin_right = 306.0
margin_bottom = 177.0
rect_min_size = Vector2( 0, 40 )

[node name="Label3" type="Label" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1"]
margin_top = 181.0
margin_right = 306.0
margin_bottom = 207.0
rect_min_size = Vector2( 64.176, 0 )
size_flags_vertical = 1
custom_colors/font_color = Color( 0.709804, 0.709804, 0.709804, 1 )
custom_fonts/font = ExtResource( 1 )
text = "TIME"
align = 1
valign = 1

[node name="Control2" type="Control" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1"]
margin_top = 211.0
margin_right = 306.0
margin_bottom = 221.0
rect_min_size = Vector2( 0, 10 )

[node name="CalendarContainer" type="HBoxContainer" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1"]
margin_top = 225.0
margin_right = 306.0
margin_bottom = 285.0
rect_min_size = Vector2( 0, 60 )
theme = SubResource( 15 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hour" type="LineEdit" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1/CalendarContainer"]
margin_left = 74.0
margin_right = 146.0
margin_bottom = 60.0
text = "23"
align = 1
max_length = 2
context_menu_enabled = false
placeholder_text = "23"

[node name="Label2" type="Label" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1/CalendarContainer"]
margin_left = 150.0
margin_right = 155.0
margin_bottom = 60.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0.576471, 0.627451, 0.631373, 1 )
text = ":"
valign = 1

[node name="Minute" type="LineEdit" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1/CalendarContainer"]
margin_left = 159.0
margin_right = 231.0
margin_bottom = 60.0
text = "59"
align = 1
max_length = 2
context_menu_enabled = false
placeholder_text = "59"

[node name="VB2" type="VBoxContainer" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB"]
margin_top = 326.0
margin_right = 306.0
margin_bottom = 429.0
theme = ExtResource( 5 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="LineEdit" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2"]
margin_right = 306.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
theme = ExtResource( 5 )
align = 1
placeholder_text = "Message"

[node name="Link" type="LineEdit" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2"]
margin_top = 34.0
margin_right = 306.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )
theme = ExtResource( 5 )
align = 1
placeholder_text = "Link"

[node name="LinkBtn" type="TextureButton" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2/Link"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -27.0
margin_right = -4.0
rect_min_size = Vector2( 0, 26 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewReminder" type="Button" parent="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2"]
margin_top = 68.0
margin_right = 306.0
margin_bottom = 103.0
rect_min_size = Vector2( 55.18, 35 )
theme = ExtResource( 3 )
text = "ADD"

[node name="Tween" type="Tween" parent="VBoxContainer/Panel/NewReminderContainer"]

[node name="Archive" type="Panel" parent="VBoxContainer/Panel"]
margin_left = 667.0
margin_right = 945.0
margin_bottom = 514.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 18 )

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer/Panel/Archive"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/Archive/Scroll"]
margin_right = 268.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContextOptions" type="VBoxContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -13.7198
margin_top = -398.359
margin_right = 12.2802
margin_bottom = -346.359
rect_pivot_offset = Vector2( 13, 26 )
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteBtn" type="TextureButton" parent="ContextOptions"]
margin_right = 26.0
margin_bottom = 26.0
rect_min_size = Vector2( 26, 26 )
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="LinkBtn" type="TextureButton" parent="ContextOptions"]
margin_top = 26.0
margin_right = 26.0
margin_bottom = 52.0
rect_min_size = Vector2( 26, 26 )
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="date_selected" from="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1/CalendarButton" to="VBoxContainer/Panel/NewReminderContainer" method="_on_CalendarButton_date_selected"]
[connection signal="text_changed" from="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1/CalendarContainer/Hour" to="VBoxContainer/Panel/NewReminderContainer" method="_on_Hour_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB1/CalendarContainer/Minute" to="VBoxContainer/Panel/NewReminderContainer" method="_on_Minute_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2/Link" to="VBoxContainer/Panel/NewReminderContainer" method="_on_Link_text_changed"]
[connection signal="pressed" from="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2/Link/LinkBtn" to="VBoxContainer/Panel/NewReminderContainer" method="_on_LinkBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel/NewReminderContainer/Panel/VB/VB2/NewReminder" to="." method="_on_NewReminder_pressed"]
[connection signal="pressed" from="ContextOptions/DeleteBtn" to="." method="_on_DeleteBtn_pressed"]
[connection signal="pressed" from="ContextOptions/LinkBtn" to="." method="_on_LinkBtn_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
